[gd_scene load_steps=5 format=3 uid="uid://b2s1xkuvscbby"]

[ext_resource type="Script" uid="uid://bq7h3423uqvr5" path="res://UI/UI scripts/win_screen.gd" id="1_a03an"]
[ext_resource type="Texture2D" uid="uid://mtpli3e0i76s" path="res://Assets/2D Space Parallax Backgrounds/layers/complete.png" id="2_gbx1v"]
[ext_resource type="FontFile" uid="uid://q6c0g5avw7b" path="res://Tektur_MainFont/Tektur-VariableFont_wdth,wght.ttf" id="3_2oepr"]
[ext_resource type="AudioStream" uid="uid://du4mj0cr5myf3" path="res://Sounds/win screen sound/DavidKBD - Eternity Pack - 08 - While We Sleep - loop.ogg" id="4_2oepr"]

[node name="Control" type="Control"]
process_mode = 3
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 1.0
offset_right = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_a03an")

[node name="background" type="TextureRect" parent="."]
modulate = Color(0, 1, 0, 1)
layout_mode = 0
offset_right = 638.0
offset_bottom = 362.0
texture = ExtResource("2_gbx1v")
expand_mode = 2

[node name="VBoxContainer" type="VBoxContainer" parent="."]
layout_mode = 0
offset_left = 123.0
offset_top = 63.0
offset_right = 2090.0
offset_bottom = 1269.0
scale = Vector2(0.2, 0.2)

[node name="Win_Label" type="Label" parent="VBoxContainer"]
layout_mode = 2
theme_override_fonts/font = ExtResource("3_2oepr")
theme_override_font_sizes/font_size = 300
text = "You Escaped!"
horizontal_alignment = 1

[node name="PlayAgain_button" type="Button" parent="VBoxContainer"]
texture_filter = 1
layout_mode = 2
focus_neighbor_bottom = NodePath("../See_Score_button")
theme_override_fonts/font = ExtResource("3_2oepr")
theme_override_font_sizes/font_size = 200
text = "Play Again
"

[node name="See_Score_button" type="Button" parent="VBoxContainer"]
layout_mode = 2
focus_neighbor_top = NodePath("../PlayAgain_button")
focus_neighbor_bottom = NodePath("../Quit_game_button")
theme_override_fonts/font = ExtResource("3_2oepr")
theme_override_font_sizes/font_size = 200
text = "See Your Score"

[node name="Quit_game_button" type="Button" parent="VBoxContainer"]
layout_mode = 2
focus_neighbor_top = NodePath("../See_Score_button")
theme_override_fonts/font = ExtResource("3_2oepr")
theme_override_font_sizes/font_size = 200
text = "Quit Game"

[node name="WinMusic" type="AudioStreamPlayer" parent="."]
stream = ExtResource("4_2oepr")
autoplay = true
parameters/looping = true

[connection signal="pressed" from="VBoxContainer/PlayAgain_button" to="." method="_on_play_again_button_pressed"]
[connection signal="pressed" from="VBoxContainer/See_Score_button" to="." method="_on_see_score_button_pressed"]
